Fixed a bug that caused the images and items for the individual pokemon cards to be off-center

--- a/sass/page.scss
+++ b/sass/page.scss
@@ -24,19 +24,22 @@ a{
     border: 10px solid rgb(240, 223, 100);
     border-radius: 1em;
     font-size: .6em;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     img{
-        border-radius: .7em;
-   margin-left: 2.9em;
-   padding: 1em;
-   background-color: skyblue;
-       width: 20em;
-       padding-left: 10em;
-       padding-right: 10em;
-        border: 4px solid white;
+      border-radius: .7em;
+      // margin-left: 2.9em;
+      padding: 1em;
+      background-color: skyblue;
+      width: 20em;
+      padding-left: 10em;
+      padding-right: 10em;
+      border: 4px solid white;
     }
     h1{
         font-size: 3em;
-        padding-left: 18.4%; 
+        // padding-left: 18.4%;   
         color: white;
  
   text-shadow: 2px 2px $redorange;
@@ -48,9 +51,8 @@ a{
 }
 
 h2{
-    margin-left: 2em; 
+    // margin-left: 2em; 
     color: black;
- 
     text-shadow: 2px 2px white;
     &:hover {
       color: $redorange;
@@ -58,15 +60,15 @@ h2{
 }
 }
 section{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 95%;
   border: 2px solid $redorange;
   padding: 1em;
   background-color: white;
-   font-size: 1em;
-    border-radius: .7em;
-   
+  font-size: 1em;
+  border-radius: .7em;
 }
     
